# ephemeral-sandbox

./: .eos-review-workflow.mjs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRACT.md  Cargo.toml  Makefile  README.md  how-to-connect.md  pyproject.toml  sandbox-e2e-jun13.md  team-system-prompts-sweevo_benchmark-2a1c5801.md
agent-core/: Cargo.toml  TEST_COVERAGE_REVIEW.md  test_inference
agent-core/agent-core-class-inventory/: eos-agent-def.md  eos-audit.md  eos-config.md  eos-db.md  eos-engine.md  eos-llm-client.md  eos-plugin-catalog.md  eos-runtime.md  eos-sandbox-api.md  eos-skills.md  eos-state.md  eos-tools.md  eos-types.md  eos-workflow.md
agent-core/config/: prd.yml
agent-core/crates/eos-agent-core/: Cargo.toml
agent-core/crates/eos-agent-core-server/src/: service.rs  user_request.rs
agent-core/crates/eos-agent-core/src/: agent_runner.rs  entry.rs  lib.rs  runtime.rs
agent-core/crates/eos-agent-ports/src/: agent_state.rs  lib.rs  spawn_agent_request.rs
agent-core/crates/eos-agent-run/: Cargo.toml
agent-core/crates/eos-agent-run/src/: active_agent_runs.rs  agent_loop_request.rs  agent_run_persistence.rs  agent_run_records.rs  agent_run_service.rs  cancellation.rs  completion.rs  lib.rs  persistence.rs  records.rs  service.rs  spawn.rs
agent-core/crates/eos-agent-run/tests/: message_records.rs
agent-core/crates/eos-agent-runner/src/: active_agent_runs.rs  agent_loop_request.rs  agent_run_persistence.rs  agent_run_service.rs  lib.rs
agent-core/crates/eos-audit/: Cargo.toml
agent-core/crates/eos-audit/src/: error.rs  event.rs  jsonl.rs  lib.rs  sink.rs
agent-core/crates/eos-audit/tests/: no_downstream_deps.rs
agent-core/crates/eos-config/: Cargo.toml
agent-core/crates/eos-config/src/: lib.rs
agent-core/crates/eos-db/: Cargo.toml
agent-core/crates/eos-db/src/: rows.rs  (+3 more)
agent-core/crates/eos-engine/: Cargo.toml
agent-core/crates/eos-plugin-catalog/: Cargo.toml
agent-core/crates/eos-runtime/: Cargo.toml
agent-core/crates/eos-skills/: Cargo.toml
agent-core/crates/eos-testkit/: Cargo.toml
agent-core/crates/eos-tools/: Cargo.toml
agent-core/crates/eos-types/: Cargo.toml
agent-core/crates/eos-workflow/: Cargo.toml
agent-core/docs/: engine-loop-readiness.md
agent-core/docs/class-inventory/: eos-db.md  eos-runtime.md  eos-sandbox-host.md  eos-tools.md  index.html
agent-core/parity/: README.md
agent-core/parity/tests/: dependency_dag.rs  profiles.rs  prompt_report.rs  schema_snapshots.rs  sqlite_schema.rs  sse_fixtures.rs
agent-core/scripts/: claude-pkce-access-token.sh
agent-core/scripts/class-inventory/: open.sh
agent-core/workspace-guard/: Cargo.toml
agent-core/workspace-guard/src/: lib.rs
agent-core/workspace-guard/tests/: crate_inventory.rs  crate_layout.rs  dependency_dag.rs  module_budget.rs  naming_rules.rs  profiles.rs  public_surface.rs  service_boundaries.rs
backend-server/: Cargo.toml  implementation_plan.md
backend-server/crates/eos-backend-api/: Cargo.toml
backend-server/crates/eos-backend-runtime/: Cargo.toml
backend-server/crates/eos-backend-store/: Cargo.toml
benchmark/backend/: Cargo.toml
benchmark/backend/src/: api.rs  app.rs  artifacts.rs  checks.rs  cleanup.rs  compare.rs  config.rs  daemon_session.rs  definitions.rs  events.rs  fixtures.rs  gateway.rs  lib.rs  main.rs  model.rs  plan.rs  recovery.rs  report.rs  resources.rs  scheduler.rs  statistics.rs
benchmark/backend/tests/: api.rs  contract.rs  extension.rs  integration.rs  plan.rs  recovery.rs  report.rs  security.rs  unit.rs
crates/daemon/core/: Cargo.toml
crates/daemon/operation/: Cargo.toml  ops.json
crates/daemon/plugin/: Cargo.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: catalog.rs  engine.rs  main.rs  router.rs  serve.rs  transport.rs  wire.rs
crates/host/: Cargo.toml
crates/host/src/: container.rs  daemon_wire.rs  lib.rs
crates/host/tests/: contract.rs
crates/sandbox-daemon/: Cargo.toml
crates/sandbox-daemon/src/: lib.rs  main.rs  runner.rs  serve.rs  telemetry.rs  timing.rs
crates/sandbox-daemon/tests/: unit.rs
crates/sandbox-e2e-live-test/: Cargo.toml
crates/sandbox-e2e-live-test/src/: assertion.rs  cleanup.rs  cli_client.rs  config.rs  fixtures.rs  gateway.rs  lib.rs  report.rs
crates/sandbox-e2e-live-test/tests/: observability_writer.rs
crates/sandbox-gateway/: Cargo.toml
crates/sandbox-gateway/tests/: gateway_cli.rs  gateway_server.rs
crates/sandbox-manager/: Cargo.toml
crates/sandbox-manager/src/: daemon_client.rs  daemon_install.rs  export_apply.rs  lib.rs  progress.rs  resource_ring.rs  runtime.rs  store.rs
crates/sandbox-manager/tests/: daemon_install.rs  manager_core.rs  manager_export.rs  manager_router.rs  manager_server.rs  resource_ring.rs  store_registry.rs
crates/sandbox-protocol/: Cargo.toml
crates/sandbox-protocol/src/: auth.rs  catalog.rs  cli_operation_spec.rs  error_kind.rs  framing.rs  help.rs  lib.rs  limits.rs  manual.rs  operation_spec.rs  request.rs  response.rs
crates/sandbox-protocol/tests/: unit.rs
sandbox/: CONTRACT.md  Cargo.toml  README.md
sandbox/config/: prd.yml
sandbox/crates/eos-daemon/: Cargo.toml
sandbox/crates/eos-e2e-test/: Cargo.toml
sandbox/crates/eos-file-ops/: Cargo.toml
sandbox/crates/eos-layerstack/: Cargo.toml
sandbox/crates/eos-ns-child/: Cargo.toml
sandbox/crates/eos-occ/: Cargo.toml
sandbox/crates/eos-operation/: Cargo.toml  ops.json
sandbox/crates/eos-overlay/: Cargo.toml
sandbox/crates/eos-plugin-ops/: Cargo.toml
sandbox/crates/eos-runtime/: Cargo.toml
sandbox/crates/eos-sandbox-host/: Cargo.toml
sandbox/crates/eos-trace/: Cargo.toml  build.rs
sandbox/crates/eos-workspace-runtime/: Cargo.toml
sandbox/crates/eosd/: Cargo.toml
sandbox/docs/: API.md  RUST-GUIDANCE.md  SPEC.md  command-git-occ-policy_SPEC.md
sandbox/docs/class_inventory/: README.md  eos-daemon.md  eos-isolated.md  eos-layerstack.md  eos-ns-holder.md  eos-occ.md  eos-overlay.md  eos-plugin.md  eos-protocol.md  eos-runner.md  eos-terminal-pair.md  eosd.md  xtask.md
sandbox/docs/contract/: 06-crate-map-and-invariants.md
(+7177 files in other folders)
