[workspace]
resolver = "2"
members = [
    "crates/sandbox-runtime/operation",
    "crates/sandbox-runtime/command",
    "crates/sandbox-runtime/config",
    "crates/sandbox-daemon",
    "crates/sandbox-manager",
    "crates/sandbox-gateway",
    "crates/sandbox-protocol",
    "crates/sandbox-runtime/workspace",
    "crates/sandbox-runtime/namespace-process",
    "crates/sandbox-runtime/layerstack",
    "crates/sandbox-runtime/overlay",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# External crates — declared ONCE, consumed via `dep.workspace = true`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
# YAML parser boundary. Only `crates/sandbox-runtime/config/src/yaml.rs` may use
# this dependency directly; callers stay behind `ConfigDocument` and typed
# section schemas.
serde_yaml_ng = "0.10"
sha2 = "0.10"
prost = "0.13"
prost-build = "0.13"
protoc-bin-vendored = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
thiserror = "2"
time = "0.3"
uuid = { version = "1", default-features = false, features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "std"] }
rustix = { version = "0.38", features = ["fs", "mount", "process", "thread"] }
nix = "0.29"
libc = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
proptest = "1"
base64 = "0.22"
futures-util = "0.3"
rtnetlink = "0.21"
netlink-sys = "0.8"

sandbox-runtime = { path = "crates/sandbox-runtime/operation" }
sandbox-runtime-command = { path = "crates/sandbox-runtime/command" }
sandbox-runtime-config = { path = "crates/sandbox-runtime/config" }
sandbox-runtime-layerstack = { path = "crates/sandbox-runtime/layerstack" }
sandbox-runtime-namespace-process = { path = "crates/sandbox-runtime/namespace-process" }
sandbox-runtime-overlay = { path = "crates/sandbox-runtime/overlay" }
sandbox-runtime-workspace = { path = "crates/sandbox-runtime/workspace" }
sandbox-manager = { path = "crates/sandbox-manager" }
sandbox-gateway = { path = "crates/sandbox-gateway" }
sandbox-protocol = { path = "crates/sandbox-protocol" }
sandbox-daemon = { path = "crates/sandbox-daemon" }
xtask = { path = "xtask" }

[workspace.lints.clippy]
# Lint groups need a lower priority than individual lints so the per-lint
# levels below win (clippy lint_groups_priority gate).
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
dbg_macro = "warn"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unused_must_use = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.package-fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
incremental = true

[profile.bench]
inherits = "release"
debug = true
strip = false
