[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ephemeralos"
version = "0.1.0"
description = "Open-source Python port of Claude Code - an AI-powered web coding assistant"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "novix-science" },
]

dependencies = [
    "anthropic>=0.39.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcp>=1.0.0",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0",
    "watchfiles>=0.20.0",
    "croniter>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.43",
    "psycopg[binary]>=3.2.9",
]

[project.optional-dependencies]
daytona = [
    "daytona-sdk>=0.149.0",
]
dev = [
    "pexpect>=4.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that exercise the full server pipeline",
    "live: tests that require real API keys (skipped when not set)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
