[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ephemeralos"
version = "0.1.0"
description = "Open-source Python port of Claude Code - an AI-powered web coding assistant"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "novix-science" },
]

dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.43",
    "greenlet>=3.0.0",
    "psycopg[binary]>=3.2.9",
    "asyncpg>=0.29.0",
    "datasets>=4.0.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "msgpack>=1.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
daytona = [
    "daytona-sdk>=0.149.0",
]
docker = [
    "docker>=7.0.0",
]
dev = [
    "mcp>=1.0.0",
    "pexpect>=4.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "hypothesis>=6.0.0",
    "pytest-xdist>=3.6.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["backend/src", "backend/config"]
sources = ["backend/src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]
# live_e2e_test/ requires a real Daytona sandbox; it is opt-in by directory.
# Default `pytest backend/tests` skips it; opt in with
# `pytest backend/tests/live_e2e_test`.
norecursedirs = ["live_e2e_test", ".hypothesis"]
asyncio_mode = "auto"
markers = [
    "live: tests that require live external services such as Daytona",
    "live_e2e_offline: live-e2e conformance tests that do not require Daytona",
    "live_e2e_daytona: live-e2e tests that require a Daytona sandbox",
    "live_e2e_capacity: opt-in composite live-e2e capacity tests",
    "live_e2e_soak: opt-in long-running live-e2e soak/performance tests",
    "mock: deterministic mocked-agent task-center-runner tests",
    "sandbox_integration: mocked-agent sandbox connection, stability, and load tests",
    "task_center_integration: mocked-agent TaskCenter workflow correctness tests",
    "real_agent: tests that run real LLM agents",
    "slow: long-running tests (heavy-run regressions, 1 M-event mock suites)",
    "timeout(seconds): per-test timeout budget when pytest-timeout is available",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# task_center/__init__.py is a re-export facade with a dynamic ``__all__`` built
# from ``_EXPORTS``; the ``if TYPE_CHECKING:`` imports exist to give type
# checkers visibility into the lazy ``__getattr__`` surface and are not used
# at runtime by design.
"backend/src/task_center/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
