[workspace]
resolver = "2"
members = [
  "crates/eos-types", "crates/eos-config", "crates/eos-state",
  "crates/eos-db", "crates/eos-audit", "crates/eos-llm-client",
  "crates/eos-agent-def", "crates/eos-sandbox-port", "crates/eos-skills",
  "crates/eos-tools", "crates/eos-engine", "crates/eos-workflow",
  "crates/eos-plugin-catalog", "crates/eos-runtime",
  "crates/eos-testkit",
  "workspace-guard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# external (versions pinned once; consumed via `dep.workspace = true`)
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "tracing"] }
tokio-util  = { version = "0.7", features = ["rt"] }
futures     = "0.3"
# `rc` enables `Serialize`/`Deserialize` for `Arc<str>`/`Rc<str>`, required by the
# `#[serde(transparent)]` typed IDs in `eos-types` whose inner type is `Arc<str>`
# (so id clones are O(1) refcount bumps). serde does not preserve shared identity
# across an `Arc` on deserialize, which is irrelevant for value-like IDs.
serde       = { version = "1", features = ["derive", "rc"] }
# Insertion-ordered JSON map keys, workspace-wide. The Python control plane this
# crate ports emits insertion-ordered dicts (`json.dumps` over insertion-ordered
# `dict`), so this is the parity-faithful default; it also makes the
# `eos-protocol` wire-contract edge's `preserve_order` consistent across every
# build scope (otherwise serialization would differ between `-p crate` and
# `--workspace` builds).
serde_json  = { version = "1", features = ["preserve_order"] }
serde_yaml  = "0.9"
schemars    = "0.8"
sha2        = "0.10"
# eos-tools: faithful port of the destructive-shell / git-mutation prehook
# patterns (RE2-compatible, no lookaround).
regex       = "1"
sqlx        = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
time        = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
async-trait = "0.1"
async-stream = "0.3"
bytes       = "1"
base64      = "0.22"
parking_lot = "0.12"
secrecy     = "0.8"
uuid        = { version = "1", features = ["v4", "serde"] }
console-subscriber = "0.4"
# dev
insta             = { version = "1", features = ["json"] }
proptest          = "1"
wiremock          = "0.6"
tracing-test      = "0.2"
loom              = "0.7"
tempfile          = "3"
# internal crates — these path edges ARE the dependency DAG
eos-types          = { path = "crates/eos-types" }
eos-config         = { path = "crates/eos-config" }
eos-state          = { path = "crates/eos-state" }
eos-db             = { path = "crates/eos-db" }
eos-audit          = { path = "crates/eos-audit" }
eos-llm-client     = { path = "crates/eos-llm-client" }
eos-agent-def      = { path = "crates/eos-agent-def" }
eos-sandbox-port   = { path = "crates/eos-sandbox-port" }
eos-skills         = { path = "crates/eos-skills" }
eos-tools          = { path = "crates/eos-tools" }
eos-engine         = { path = "crates/eos-engine" }
eos-workflow       = { path = "crates/eos-workflow" }
eos-plugin-catalog = { path = "crates/eos-plugin-catalog" }
eos-runtime        = { path = "crates/eos-runtime" }
# Dev-only shared test doubles (scripted LLM/EventSource, fake sandbox edges,
# AppState builder, Layer-B workflow runners). Consumed under [dev-dependencies]
# with the minimal feature; the resulting dev-only dep cycles are Cargo-legal.
eos-testkit        = { path = "crates/eos-testkit" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"        # see GC-workspace-04 — deliberately NOT abort

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3            # optimize deps even in dev (faster test runs)

[profile.bench]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
correctness = { level = "deny",  priority = -1 }
suspicious  = { level = "deny",  priority = -1 }
style       = { level = "warn",  priority = -1 }
complexity  = { level = "warn",  priority = -1 }
perf        = { level = "warn",  priority = -1 }
# selective pedantic (lint-pedantic-selective)
doc_markdown = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
redundant_closure_for_method_calls = "warn"
# restriction (selective) — production crates
unwrap_used = "warn"
dbg_macro   = "warn"
print_stdout = "warn"
undocumented_unsafe_blocks = "deny"
await_holding_lock = "deny"   # std/parking_lot guard held across .await is a bug (anchor §7)

[workspace.lints.rust]
unsafe_code = "forbid"     # no agent-core crate needs unsafe; sandbox owns FFI
unused_must_use = "warn"
missing_debug_implementations = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
