[workspace]
resolver = "2"
members = [
  "crates/eos-sandbox-host",
  "crates/eos-backend-types",
  "crates/eos-backend-config",
  "crates/eos-backend-store",
  "crates/eos-backend-runtime",
  "crates/eos-backend-obs",
  "crates/eos-backend-api",
  "crates/eos-backend-main",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# external (versions mirrored from agent-core's workspace so the relocated host
# and obs crates resolve identical pins; consumed via `dep.workspace = true`)
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "tracing"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
# Insertion-ordered JSON map keys, workspace-wide — keeps the `eos-protocol`
# wire-contract edge's `preserve_order` consistent with agent-core and sandbox.
serde_json  = { version = "1", features = ["preserve_order"] }
serde_yaml  = "0.9"
schemars    = "0.8"
# backend.db persistence (eos-backend-store). Pins mirror agent-core's so the
# shared `time` TEXT timestamp encoding stays byte-identical across both DBs.
sqlx        = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
time        = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
sha2        = "0.10"
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
async-trait = "0.1"
bytes       = "1"
parking_lot = "0.12"
# cooperative run cancellation: the launcher signals a CancellationToken and the
# spawned run task is the sole finalizer (select! on the token). Pin/feature
# mirror agent-core and sandbox so the shared 0.7.x resolves identically.
tokio-util  = { version = "0.7", features = ["rt"] }
# eos-sandbox-host: typed async Docker Engine API client (hyper 1.x stack).
bollard     = "0.17"
tar         = "0.4"
# eos-backend-api HTTP surface: axum router + SSE/WebSocket streaming. Pins ride
# the hyper 1.x / http 1.x / tower 0.5 stack already resolved by bollard.
axum        = { version = "0.8", features = ["ws"] }
tower       = { version = "0.5", features = ["util"] }
uuid        = { version = "1", features = ["v4", "serde"] }
# dev
proptest    = "1"
tempfile    = "3"

# cross-workspace edges: the backend is the composition root, so it consumes
# agent-core's port/state crates and the sandbox wire-protocol crate by path.
# Each crate is a member of its own workspace and inherits its own settings.
eos-sandbox-port   = { path = "../agent-core/crates/eos-sandbox-port" }
eos-types          = { path = "../agent-core/crates/eos-types" }
eos-audit          = { path = "../agent-core/crates/eos-audit" }
eos-protocol       = { path = "../sandbox/crates/eos-protocol" }
# the run launcher drives agent-core to completion: eos-runtime is the narrow
# composition entry (run_request / RuntimeServices / EventCallback); eos-state
# and eos-config name the RequestStatus / WorkflowConfig values it joins or passes.
eos-runtime        = { path = "../agent-core/crates/eos-runtime" }
eos-state          = { path = "../agent-core/crates/eos-state" }
eos-config         = { path = "../agent-core/crates/eos-config" }

# internal backend crates — these path edges are the backend dependency DAG.
eos-sandbox-host   = { path = "crates/eos-sandbox-host" }
eos-backend-types   = { path = "crates/eos-backend-types" }
eos-backend-config  = { path = "crates/eos-backend-config" }
eos-backend-store   = { path = "crates/eos-backend-store" }
eos-backend-runtime = { path = "crates/eos-backend-runtime" }
eos-backend-obs     = { path = "crates/eos-backend-obs" }
eos-backend-api     = { path = "crates/eos-backend-api" }
eos-backend-main    = { path = "crates/eos-backend-main" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
correctness = { level = "deny",  priority = -1 }
suspicious  = { level = "deny",  priority = -1 }
style       = { level = "warn",  priority = -1 }
complexity  = { level = "warn",  priority = -1 }
perf        = { level = "warn",  priority = -1 }
doc_markdown = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
redundant_closure_for_method_calls = "warn"
unwrap_used = "warn"
dbg_macro   = "warn"
print_stdout = "warn"
undocumented_unsafe_blocks = "deny"
await_holding_lock = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"
missing_debug_implementations = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
