[workspace]
resolver = "2"
members = [
    "crates/eos-trace",
    "crates/eos-operation",
    "crates/eos-command",
    "crates/eos-config",
    "crates/eosd",
    "crates/eos-daemon",
    "crates/eos-workspace",
    "crates/eos-namespace",
    "crates/eos-layerstack",
    "crates/eos-overlay",
    "crates/eos-plugin",
    "crates/eos-sandbox-host",
    "crates/eos-sandbox-gateway",
    "crates/eos-e2e-test",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# External crates — declared ONCE, consumed via `dep.workspace = true`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_yaml = "0.9"
sha2 = "0.10"
prost = "0.13"
prost-build = "0.13"
protoc-bin-vendored = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
ignore = "0.4"
thiserror = "2"
time = "0.3"
uuid = { version = "1", default-features = false, features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
rustix = { version = "0.38", features = ["fs", "mount", "process", "thread"] }
nix = "0.29"
libc = "0.2"
anyhow = "1"
proptest = "1"
base64 = "0.22"
futures-util = "0.3"
rtnetlink = "0.21"
netlink-sys = "0.8"
# Test-support only (eos-e2e-test): parse the committed e2e.toml topology config.
toml = "0.8"

# Internal crates — path deps (the edges below ARE the architecture).
eos-command = { path = "crates/eos-command" }
eos-config = { path = "crates/eos-config" }
eos-layerstack = { path = "crates/eos-layerstack" }
eos-operation = { path = "crates/eos-operation" }
eos-overlay = { path = "crates/eos-overlay" }
eos-plugin = { path = "crates/eos-plugin" }
eos-namespace = { path = "crates/eos-namespace" }
eos-trace = { path = "crates/eos-trace" }
eos-daemon = { path = "crates/eos-daemon" }
eosd = { path = "crates/eosd" }
eos-sandbox-gateway = { path = "crates/eos-sandbox-gateway" }
eos-sandbox-host = { path = "crates/eos-sandbox-host" }
eos-e2e-test = { path = "crates/eos-e2e-test" }
eos-workspace = { path = "crates/eos-workspace" }
xtask = { path = "xtask" }

[workspace.lints.clippy]
# Lint groups need a lower priority than individual lints so the per-lint
# levels below win (clippy lint_groups_priority gate).
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
dbg_macro = "warn"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unused_must_use = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false
