[package]
name = "gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Host-side sandbox gateway: receive, gate, route, return."

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
host = { workspace = true }
protocol.workspace = true
# preserve_order keeps forwarded request args in caller order on the wire.
serde_json = { workspace = true, features = ["preserve_order"] }

[lints]
workspace = true
